[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freshsky-common"
version = "0.5.0"
description = "Shared infrastructure (LLM chain, security, caching, rate limiting, metrics) for Fresh Sky LLC apps."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Fresh Sky LLC", email = "admin@freshskyllc.com"}]
license = {text = "Proprietary"}
dependencies = [
    "flask>=3.1.3",
    "requests>=2.32.5",
    "stripe>=7.0",
    "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["freshsky_common*"]

[tool.setuptools.package-data]
"freshsky_common" = ["refusal_patterns.json", "baselines.json", "canonical_gov.json", "models.json"]
"freshsky_common.static" = ["*.js", "*.css", "*.html"]
